--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Tejas Bhitle</title>
   <base href="https://tejasbhitle.github.io">
-  <meta name="theme-color" content="#219673" />
+  <meta name="theme-color" content="#2196F3" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
